Making some changes to project based on code review. Created a middleware for not defined. Changed upload limit. Removed not defined documentation.
